# cookiecutter-cpp-devcontainer

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: CMakeLists.txt  CMakePresets.json
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile  devcontainer-compose.json  devcontainer.json  docker-compose.yml  env
{{cookiecutter.project_slug}}/.devcontainer/ubuntu/: devcontainer.json  docker-compose.yml
{{cookiecutter.project_slug}}/.devcontainer/windows/: devcontainer.json  docker-compose.yml
{{cookiecutter.project_slug}}/tests/: CMakeLists.txt  {{cookiecutter.project_slug}}_t.cpp
